# next-cpp

./: README.md
catch2/: Dockerfile  README.md  build_image.bat  run-tests.sh  run_image.bat
catch2/docker_image/: CMakeLists.txt  run-kata.sh  run-tests.sh
catch2/docker_image/src/: CMakeLists.txt
catch2/docker_image/tests/: CMakeLists.txt  codewars_reporter.cpp
catch2/include/: challenge.h
catch2/kata_code/ExampleOrganization/tests/: test_solution.cpp
catch2/kata_code/OriginalExample/tests/: test_solution.cpp
catch2/snippets/OriginalExample/: solution.snippet  test_solution.snippet
catch2/src/: CMakeLists.txt
catch2/tests/: CMakeLists.txt  codewars_reporter.cpp  test_solution.cpp
gtest/: Dockerfile  README.md  build_image.bat  configure.sh  distribute-snippets.sh  run-all.sh  run-tests.sh  run_image.bat
gtest/docker_image/tests/: main.cpp
gtest/include/: challenge.h
gtest/kata_code/Cafeteria/include/: solution.h
gtest/kata_code/ExampleCrash/include/: solution.h
gtest/kata_code/ExampleCrash/src/: solution.cpp
gtest/kata_code/ExampleCrash/tests/: test_solution.cpp
gtest/kata_code/ExampleExceptions/include/: solution.h
gtest/kata_code/ExampleExceptions/src/: solution.cpp
gtest/kata_code/ExampleExceptions/tests/: test_solution.cpp
gtest/kata_code/ExampleFailureMessages/include/: solution.h
gtest/kata_code/ExampleFailureMessages/src/: solution.cpp
gtest/kata_code/ExampleFailureMessages/tests/: test_solution.cpp
gtest/kata_code/ExampleOrganization/tests/: test_solution.cpp
gtest/kata_code/ExampleParametrized/include/: solution.h
gtest/kata_code/ExampleParametrized/src/: solution.cpp
gtest/kata_code/ExampleParametrized/tests/: test_solution.cpp
gtest/kata_code/UniqueInOrder/include/: solution.h
gtest/kata_code/UniqueInOrder/src/: solution.cpp
gtest/preprocessor/: cwpp.cpp
gtest/snippets/: solution.snippet  test_solution.snippet
gtest/snippets-Cafeteria/: preloaded.snippet
gtest/snippets-originalExample/: preloaded.snippet  solution.snippet  test_solution.snippet
gtest/snippets/Cafeteria/: preloaded.snippet  solution.snippet  test_solution.snippet
gtest/snippets/OriginalExample/: preloaded.snippet
gtest/snippets/UniqueInOrder/: solution.snippet
gtest/src/: CMakeLists.txt
gtest/tests/: CMakeLists.txt  main.cpp  test_solution.cpp
preprocessor/: cwpp.ts
